--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "helmet": "^3.9.0",
     "npm-run-all": "4.1.2",
     "objection": "^0.9.2"
   },
   "devDependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
