--- a/package.json
+++ b/package.json
@@ -4,25 +4,43 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "npm-run-all dev:server",
-    "dev:server": "NODE_ENV=development node server.js server.js --watch src --watch server.js",
+    "dev": "npm-run-all --parallel dev:server dev:webpack",
+    "dev:webpack": "./node_modules/.bin/webpack --watch",
+    "dev:server": "NODE_ENV=development nodemon server.js --watch src --watch server.js --ignore src/client",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:webpack": "webpack --watch",          
+    "build": "./node_modules/.bin/webpack -p"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "1.4.3",
+    "cookie-session": "2.0.0-beta.3",
     "helmet": "^3.9.0",
     "npm-run-all": "4.1.2",
-    "objection": "^0.9.2"
+    "objection": "0.9.2",
+    "objection-password": "0.2.0",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
+    "react": "16.1.0",
+    "react-dom": "16.1.0",
+    "react-router-dom": "4.2.0"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
     "knex": "^0.13.0",
     "mysql": "^2.15.0",
-    "nodemon": "1.12.1"
+    "nodemon": "1.12.1",
+    "webpack": "3.8.1"
   }
 }
