--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "server.js",
   "scripts": {
     "dev": "npm-run-all --parallel dev:server dev:webpack",
-    "dev:webpack": "./node_modules/.bin/webpack --watch",
+    "dev:webpack": "webpack --watch",
     "dev:server": "NODE_ENV=development nodemon server.js --watch src --watch server.js --ignore src/client",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:webpack": "webpack --watch",          
     "build": "./node_modules/.bin/webpack -p"
   },
   "author": "",
@@ -35,12 +34,20 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
     "knex": "^0.13.0",
     "mysql": "^2.15.0",
     "nodemon": "1.12.1",
-    "webpack": "3.8.1"
+    "open": "0.0.5",
+    "prop-types": "^15.6.0",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
