--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "open": "0.0.5",
     "prop-types": "^15.6.0",
     "style-loader": "^0.19.0",
+    "superagent": "^3.8.1",
     "url-loader": "^0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-middleware": "^1.12.2",
