--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "objection-password": "0.2.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
-    "react": "16.1.0",
-    "react-dom": "16.1.0",
+    "react": "^16.1.0",
+    "react-dom": "^16.1.0",
+    "react-materialize": "^1.1.1",
     "react-router-dom": "4.2.0"
   },
   "devDependencies": {
