--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.2",
     "cookie-parser": "1.4.3",
     "cookie-session": "2.0.0-beta.3",
     "helmet": "^3.9.0",
+    "material-ui": "^1.0.0-beta.23",
     "npm-run-all": "4.1.2",
     "objection": "0.9.2",
     "objection-password": "0.2.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-materialize": "^1.1.1",
-    "react-router-dom": "4.2.0"
+    "react-router-dom": "4.2.0",
+    "reactstrap": "^5.0.0-alpha.4"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
