--- a/package.json
+++ b/package.json
@@ -29,15 +29,7 @@
     "react-dom": "^16.2.0",
     "react-materialize": "^1.1.1",
     "react-router-dom": "4.2.0",
-    "reactstrap": "^5.0.0-alpha.4"
-  },
-  "devDependencies": {
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
+    "reactstrap": "^5.0.0-alpha.4",
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
@@ -46,7 +38,6 @@
     "fs-extra": "^4.0.2",
     "knex": "^0.13.0",
     "mysql": "^2.15.0",
-    "nodemon": "1.12.1",
     "open": "0.0.5",
     "prop-types": "^15.6.0",
     "style-loader": "^0.19.0",
@@ -55,5 +46,14 @@
     "webpack": "3.8.1",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0"
+  },
+  "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "nodemon": "1.12.1"
   }
 }
