--- a/package.json
+++ b/package.json
@@ -15,32 +15,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "cookie-parser": "1.4.3",
     "cookie-session": "2.0.0-beta.3",
-    "helmet": "^3.9.0",
-    "material-ui": "^1.0.0-beta.23",
-    "npm-run-all": "4.1.2",
-    "objection": "0.9.2",
-    "objection-password": "0.2.0",
-    "passport": "0.4.0",
-    "passport-local": "1.0.0",
-    "pg": "^7.4.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-materialize": "^1.1.1",
-    "react-router-dom": "4.2.0",
-    "reactstrap": "^5.0.0-alpha.4",
-    "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
+    "helmet": "^3.9.0",
     "knex": "^0.13.0",
+    "material-ui": "^1.0.0-beta.23",
     "mysql": "^2.15.0",
+    "npm-run-all": "4.1.2",
+    "objection": "0.9.2",
+    "objection-password": "0.2.0",
     "open": "0.0.5",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
+    "pg": "^7.4.0",
     "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-materialize": "^1.1.1",
+    "react-router-dom": "4.2.0",
+    "reactstrap": "^5.0.0-alpha.4",
     "style-loader": "^0.19.0",
     "superagent": "^3.8.1",
     "url-loader": "^0.6.2",
